# MarvelPhysics

./: #CMakeLists.txt#  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  MarvalPhysics.cbp  README.md  README.org  TODOlist.md  build.sh  cmake_install.cmake  cmake_uninstall.cmake  readme.md
3rd/: CMakeLists.txt
3rd/bigbang/: basis_opt_energy.h  catenary.cc  cholmod_qr_solver.cc  cj_function.mac  com_max.sh  constraint.cc  cosserat_rod.f90  cosserat_rod.mac  fem_basis.f90  fem_basis.mac  func2opt.h  geom_util.cc  geom_util.h  grad_check.cc  hex_cons_law.f90  hex_cons_law.mac  io.cc  ipopt_solver.h  mass_matrix.cc  modal_analysis.cc  modal_analysis.h  mtr_sampler.cc  multigrid_base.cc  optimizer.h  pbd_cons.f90  petsc_linear_solver.h  phx_util.cc  proj_dynamics.cc  quad_to_lin.mac  readjson.cpp  readjson.h  rotation_strain.cc  rotation_strain.h  sdf.f90  sigma_elastic.cc.bak  sigma_elastic.h  stencil.cc  stencil.h  stencil.h.deprecated  stencil_extractor.h  (+1 more)
App/: CMakeLists.txt
App/pipline_Z/: CMakeLists.txt  constrained_newton.h  pipline_Z.cc  pipline_Z.mk
Embedded/: CMakeLists.txt  poisson_disk_sampling.cpp
Embedded/data/cat/: cat.off
Embedded/src/deform_graph/: node.cpp  node.h  poisson_disk_sampling.cpp
FEM/: CMakeLists.txt
FEM/data/Cube/: Cube.vtk
FEM/data/beam/: beam.1.edge  beam.1.ele  beam.1.face  beam.1.node  beam.1.smesh  beam.csv  beam.ply  beam.vtk  blender_physics.json  example.vtk  rotate.csv
FEM/data/beam2/: beam2.vtk
FEM/data/beam_dense/: beam_.msh  beam_dense.csv  beam_dense.vtk
FEM/data/cube_hex/: cube_hex.csv  cube_hex.vtk  cube_hex_bottom.csv
FEM/data/dense_cube/: dense_cube.csv
FEM/scripts/: example_based.mk  test_elas.mk  test_poisson.mk  test_three_component.mk
FEM/src/: CMakeLists.txt  FEM.cc  FEM.h  basis_func.cc  basis_func.h  constitutive.h  elas_energy.cc  elas_energy.h  gaussian_quadrature.h  interpolate.h  mass_matrix.cc  mass_matrix.h  poisson.cc  poisson.h
FEM/tests/: CMakeLists.txt  example_based.cc  gen_pose.cc  test_elas.cc  test_extract_surface.cc  test_interp.cc  test_poisson.cc  test_three_component.cc
Multigrid/scripts/: 0_after.txt  0_before.txt  1_after.txt  1_before.txt  2_after.txt  2_before.txt  3_after.txt  3_before.txt  4_after.txt  4_before.txt  A_spm  A_t_spm  L.spm  V_cycle.json  b_mat  error.txt  itrs_time.txt  test_Vcycles.sh  test_hsc.py  test_spar.mk  valgrind.dot
Multigrid/src/: .#gauss_seidel.h  CMakeLists.txt  Sparsification.cc  Sparsification.h  gauss_seidel.cc  gauss_seidel.h  hsc.cc  hsc.h  inverse_isoparametric_map.cc  inverse_isoparametric_map.h  multigrid.cc  multigrid.h  pcg.cc  pcg.h
Multigrid/tests/: CMakeLists.txt  V_cycle.cc  test_GS.cc  test_PCG.cc  test_SP_COMP.cc  test_hsc.cc  test_inverse_map.cc  test_iter.cc  test_permutation.cc  test_sparsification.cc  test_spectra.cc
Point_Sys/: CMakeLists.txt  Makefile  cmake_install.cmake
Point_Sys/data/: Cube.csv
Point_Sys/result/: 53092_sf-G_G0_subdivide937772130937772130.vtk  cube.vtk
Point_Sys/scripts/: #run_genpoints.mk#  #test_energy.json#  .#input_para.json  .#test_energy.json  blender_physics.json  double_loop.txt  run_genpoints.mk  run_test_energy.mk  run_testwn.mk  shell_1.txt  shell_2.txt  test_energy.json  test_energy2.json  test_energy_implicit.json  test_linearInterp.json  test_tet.json
Point_Sys/src/: #gen_points.h#  #get_nn.cc#  #get_nn.h#  #points_energy.cc#  #points_energy.h#  .#coll_wrapper.h  .#get_nn.h  CMakeLists.txt  Makefile  basic_energy.cc  basic_energy.h  cmake_install.cmake  coll_wrapper.cc  coll_wrapper.h  data_stream.cc  data_stream.h  gen_points.cc  gen_points.h  gen_surf.cc  gen_surf.h  gen_surf.imp  geometry.cc  geometry.h  get_nn.cc  get_nn.h  init.cc  init.h  point_sys.cc  point_sys.h  points_energy.cc  points_energy.h  points_energy_cc_backup  time_integral.h
Point_Sys/tests/: #CMakeLists.txt#  #test_genpoints.cc#  .#blender_coll.cpp  .#blender_meshless.cpp  .#test_genpoints.cc  CMakeLists.txt  Makefile  blender_coll.cpp  blender_meshless.cpp  test_SparseMatrix.cc  test_autodiff.cc  test_bay.cc  test_coll.cc  test_coll1.cc  test_coll_rky.cc  test_data_str.cc  test_energy.cc  test_energy_implicit.cc  test_energy_implicit_cc_backup  test_genpoints.cc  test_linearInterp.cc  test_new_struct.cc  test_openmp.cc  test_tet.cc  test_wdnb.cc
build_clang/: CMakeCache.txt  Makefile  cmake_install.cmake
build_clang/FEM/: Makefile  cmake_install.cmake
build_clang/src/: Makefile  cmake_install.cmake
cmake/: CMakeCache.txt  FindALGLIB.cmake  FindGlog.cmake  FindIPOPT.cmake  FindJsonCpp.cmake  FindLIBIGL.cmake  FindPETSc.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake  cmake_uninstall.cmake.1  cmake_uninstall.cmake.in
cmake/Point_Sys/: Makefile  cmake_install.cmake
cmake/src/: Makefile
mprgp_solver/: .dir-locals.el  .gitignore  CMakeLists.txt  README.md
mprgp_solver/src/: CMakeLists.txt  collision_plane.h  collision_proxy.h  collision_tang.h  mprgp_precondition.h  mprgp_projector.h  mprgp_solver.h  mprgp_utils.h
mprgp_solver/src/SimpleQP/: Array.h  CMakeLists.txt  QuadProg.cpp  QuadProg.h  SimpleQP.h
mprgp_solver/src/utils/: CMakeLists.txt
mprgp_solver/src/utils/logger/: CMakeLists.txt  log_macro.imp  log_utils.cc  log_utils.h
mprgp_solver/src/utils/timer/: CMakeLists.txt  timer_template.imp  timer_utils.cc  timer_utils.h
mprgp_solver/tests/: CMakeLists.txt  test_collid.cc  test_mprgp.cc  test_plane.cc
scripts/: build.sh
src/: CMakeLists.txt  DEFINE_TYPE.h  Makefile  SDF.cc  SDF.h  SDF.imp  basic_energy.cc  basic_energy.h  basic_energy.imp  coll_response.h  coll_wrapper.cc  coll_wrapper.h  config.cc  config.h  data_str.cc  data_str.h  data_str_core.cc  data_str_core.h  data_str_core.imp  def.h  def_h_old  eigen_ext.h  extract_surface.imp  gpu_solve.cu  gpu_solve.h  implicit_euler.cc  implicit_euler.h  implicit_euler.imp  implicit_euler_gpu.h  io.cc  io.h  line_search.cc  line_search.h  line_search_imp.h  pcg_gpu.cu  pcg_gpu.h  search_eigenvalues.cc  search_eigenvalues.h  tensor.h  vec.h  (+2 more)
src/coll_wrapper/: coll_response.h
test/: CMakeLists.txt
(+2157 files in other folders)
