cmake_minimum_required(VERSION 2.6)
project(tests)

# test mprgp
# add_definitions(-DSINGLE_PRINTER_FLAG)
# add_definitions(-DEMERG_PRINT_FLAG)
# add_definitions(-DALERT_PRINT_FLAG)
# add_definitions(-DCRITICAL_PRINT_FLAG)
# add_definitions(-DERROR_PRINT_FLAG)
# add_definitions(-DWARN_PRINT_FLAG)
# add_definitions(-DNOTICE_PRINT_FLAG)
# add_definitions(-DINFO_PRINT_FLAG)
# add_definitions(-DDEBUG_PRINT_FLAG)
# add_definitions(-DASSERT_EXT_FLAG)

# add_definitions(-DSINGLE_TIMER_FLAG)
# add_definitions(-DUSE_STOPWATCH_HELPER_FLAG)

add_executable(test_mprgp test_mprgp.cc)
target_link_libraries(test_mprgp SQP)

# # test timer
# if(CHAOS_UTILS_LIBRARY_FLAG OR (CHAOS_TIMER_LIBRARY_FLAG AND CHAOS_LOG_LIBRARY_FLAG))
#   add_definitions(-DCHAOS_TIMER_LIBRARY_FLAG)
#   add_definitions(-DCHAOS_LOG_LIBRARY_FLAG)
#   set(timer_lib ctimer clog)
#   set(timer_lib_static ctimer_static clog_static)
# elseif(CHAOS_TIMER_LIBRARY_FLAG)
#   add_definitions(-DCHAOS_TIMER_LIBRARY_FLAG)
#   set(timer_lib ctimer)
#   set(timer_lib_static ctimer_static)
# elseif(CHAOS_LOG_LIBRARY_FLAG)
#   add_definitions(-DCHAOS_LOG_LIBRARY_FLAG)
#   set(timer_lib clog)
#   set(timer_lib_static clog_static)
# else()
#   set(timer_lib)
#   set(timer_lib_static)
# endif()

# if(CHAOS_UTILS_LIBRARY_FLAG OR CHAOS_TIMER_LIBRARY_FLAG OR CHAOS_LOG_LIBRARY_FLAG)
#   add_executable(test_timer_with_ctimer test_timer_utils.cc)
#   target_link_libraries(test_timer_with_ctimer ${timer_lib})

#   add_executable(test_timer_with_ctimer_static test_timer_utils.cc)
#   target_link_libraries(test_timer_with_ctimer_static ${timer_lib_static})
# else(CHAOS_UTILS_LIBRARY_FLAG OR CHAOS_TIMER_LIBRARY_FLAG OR CHAOS_LOG_LIBRARY_FLAG)
#   add_executable(test_timer test_timer_utils.cc)
# endif(CHAOS_UTILS_LIBRARY_FLAG OR CHAOS_TIMER_LIBRARY_FLAG OR CHAOS_LOG_LIBRARY_FLAG)
